--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18] # or 20 if you're on Node 20
+        node-version: [18] # or 20 if your project runs on Node 20
 
     steps:
       # Checkout repo
@@ -30,11 +30,12 @@ jobs:
         run: npm install
         working-directory: ./server
 
-      # Install and build client
+      # Install client dependencies
       - name: Install client dependencies
         run: npm install
         working-directory: ./client
 
+      # Build client (ignore ESLint warnings)
       - name: Build client
-        run: npm run build
+        run: CI=false npm run build
         working-directory: ./client
