--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: MERN CI/CD
+name: CI
 
 on:
   push:
@@ -10,32 +10,38 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18] # or 20 if your project runs on Node 20
-
     steps:
-      # Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
+          cache: 'npm'
 
-      # Install server dependencies
-      - name: Install server dependencies
-        run: npm install
+      - name: Install dependencies (Backend)
         working-directory: ./server
-
-      # Install client dependencies
-      - name: Install client dependencies
         run: npm install
-        working-directory: ./client
 
-      # Build client (ignore ESLint warnings)
-      - name: Build client
-        run: CI=false npm run build
+      - name: Install dependencies (Frontend)
         working-directory: ./client
+        run: npm install
+
+      # Skip tests (since you said you don’t have any yet)
+
+      - name: Build frontend
+        working-directory: ./client
+        run: |
+          unset CI   # prevent eslint warnings from failing build
+          npm run build
+
+      # ✅ SonarCloud Scan
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: .
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+          SONAR_ORG: ${{ secrets.SONAR_ORG }}
